# firmware-report-server

./: .gitignore  Dockerfile  Makefile  Pipfile  ReadMe.md  pyproject.toml
.github/workflows/: analyse.yml  build.yml
app/: api.py  app.py  authentication.py  database.py  models.py  settings.py  utils.py
app/services/: branches.py  diff_hash.py  files.py  map_db_writer.py  map_parser.py
scripts/: get_env.py
tests/: conftest.py  pytest.ini  test_compare_map_files.py
tests/assets/: firmware.elf.map  firmware.elf.map.all
tests/source/: map_mariadb_insert.py  map_parser.py
